--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         // Обновление позиции камер по кругу
         function updateChambersPosition() {
-            const revolverRadius = 90; // Радиус барабана
+            const revolverRadius = 70; // Уменьшенный радиус барабана
             const centerX = 100; // Центр круга по X
             const centerY = 100; // Центр круга по Y
 
