--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             align-items: center;
             position: relative;
             background-color: #ccc;
-            transition: transform 1s ease-out;
         }
         .chamber {
             position: absolute;
@@ -44,7 +43,8 @@
             border-right: 10px solid transparent;
             border-bottom: 20px solid black;
             position: absolute;
-            top: -30px;
+            top: 90px;
+            left: 180px;
         }
         #message {
             margin-top: 20px;
@@ -95,7 +95,8 @@
 
         let bullets = 1; // Изначально 1 патрон
         let maxBullets = 6; // Всего 6 патронов
-        let rotation = 0;
+        let currentChamber = 0;
+        let isShooting = false;
 
         function getRandomInt(max) {
             return Math.floor(Math.random() * max);
@@ -117,33 +118,40 @@
 
         function updateChambers() {
             chambers.forEach((chamber, index) => {
-                if (index < bullets) {
+                chamber.classList.remove('red');
+                if (index === currentChamber) {
                     chamber.classList.add('red');
-                } else {
-                    chamber.classList.remove('red');
                 }
             });
         }
 
-        function spinRevolver() {
-            let speed = 10; // Начальная скорость вращения
-            const interval = setInterval(() => {
-                speed *= 0.95; // Постепенное замедление
-                rotation += speed;
-                revolver.style.transform = `rotate(${rotation}deg)`;
+        function spinRevolver(resultChamber) {
+            let speed = 100; // Начальная скорость (мс между сменой камер)
+            let rotations = 5; // Количество полных оборотов
+            let steps = rotations * chambers.length + resultChamber; // Количество шагов до остановки
 
-                if (speed < 0.1) {
+            const interval = setInterval(() => {
+                if (steps <= 0) {
                     clearInterval(interval);
                     checkIfDead();
+                    return;
                 }
-            }, 50);
+
+                currentChamber = (currentChamber + 1) % chambers.length;
+                updateChambers();
+                steps--;
+
+                if (steps < chambers.length) {
+                    speed += 10; // Замедляем анимацию на последних шагах
+                }
+
+                setTimeout(() => clearInterval(interval), speed); 
+            }, speed);
         }
 
         function checkIfDead() {
-            const currentChamberIndex = Math.floor(((rotation / 360) % 1) * chambers.length);
-            console.log("Текущая камера:", currentChamberIndex);
-
-            if (currentChamberIndex === 0 && chambers[currentChamberIndex].classList.contains('red')) {
+            if (currentChamber === 0) {
+                // Если камера красная — игрок "умер"
                 revolver.classList.add('dead');
                 shootButton.disabled = true;
                 setTimeout(() => {
@@ -152,24 +160,25 @@
             } else {
                 bullets++;
                 alert(`ВЫСТРЕЛА НЕ БЫЛО. ШАНС: ${bullets}/6`);
-                updateChambers();
             }
         }
 
         shootButton.addEventListener('click', () => {
-            if (bullets <= maxBullets) {
-                spinRevolver();
+            if (bullets <= maxBullets && !isShooting) {
+                isShooting = true;
+                const resultChamber = getRandomInt(chambers.length); // Определяем результат
+                spinRevolver(resultChamber); // Запускаем вращение
             }
         });
 
         resetButton.addEventListener('click', () => {
             bullets = 1;
+            isShooting = false;
+            currentChamber = 0;
             updateChambers();
             revolver.classList.remove('dead');
             message.style.display = 'none';
             shootButton.disabled = false;
-            rotation = 0;
-            revolver.style.transform = `rotate(0deg)`;
         });
 
         updateChambersPosition();
